--- a/src/main/webapp/resources-site/css/stylesheet.css
+++ b/src/main/webapp/resources-site/css/stylesheet.css
@@ -812,7 +812,7 @@ a:focus { outline:none; }
 	margin:0px 3px 0px 0px;
 	position:relative;
 	text-align: center;
-	border:3px solid transparent;
+	border:3px solid #000;
 }
 @media only screen and (min-width:1025px) {
 .owl-carousel .product-thumb:hover {
